Testing building artifact in dockerfile

--- a/deployment-config/Dockerfile
+++ b/deployment-config/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install -g serve
+RUN npm install -g serve && npm run build
 
 # Bundle app source
 COPY . .
