Testing installing dependencies and building app in docker

--- a/deployment-config/Dockerfile
+++ b/deployment-config/Dockerfile
@@ -4,12 +4,12 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install -g serve
+RUN npm install
 
 # Bundle app source
 COPY . .
 
-RUN npm run build
+RUN npm run dockerBuild
 
 EXPOSE 3000
 
