--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"dockerBuild": "npm run build && npm install -g serve",
-,		"build": "react-scripts build",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
