--- a/deployment-config/Dockerfile
+++ b/deployment-config/Dockerfile
@@ -9,6 +9,20 @@ RUN npm install
 # Bundle app source
 COPY . .
 
+ARG REACT_APP_AUTH_URL
+ARG REACT_APP_COLOR
+ARG REACT_APP_LOGIN
+ARG REACT_APP_LYRICS
+ARG REACT_APP_PROD_ID
+ARG REACT_APP_REFRESH
+
+ENV REACT_APP_AUTH_URL $REACT_APP_AUTH_URL
+ENV REACT_APP_COLOR $REACT_APP_COLOR
+ENV REACT_APP_LOGIN $REACT_APP_LOGIN
+ENV REACT_APP_LYRICS $REACT_APP_LYRICS
+ENV REACT_APP_PROD_ID $REACT_APP_PROD_ID
+ENV REACT_APP_REFRESH $REACT_APP_REFRESH
+
 RUN npm run dockerBuild
 
 EXPOSE 3000
