--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
 	"name": "client",
 	"version": "0.1.0",
 	"dependencies": {
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-regular-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.15",
 		"@material-ui/core": "^4.12.3",
+		"@mui/icons-material": "^5.3.0",
+		"@mui/material": "^5.3.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
 		"bootstrap": "^4.6.0",
 		"react": "^17.0.2",
-		"react-bootstrap": "^1.5.2",
+		"react-bootstrap": "^2.1.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "^5.0.0",
 		"react-spotify-web-playback": "^0.8.1",
