Finishes SDK integration
Removes typescript dependency

Adds changes to cloudbuild.json

Adds React from react import

Adds react

Adds updates to player and player styles

Adds seeking functionality to slider

Adds ability to mute with button

Finishes seeking logic. Adds automated movement of seek bar. Adds current position number and total duration number. Adds functionlity of shuffly and repeat buttons

test build

test diff node version

Test

Updates dependencies. Updates css before and after elements for sliders. Changes ifs to switch. Changes timer to not go over 60 seconds and matches more with server timer

Updates app name

Tests new styling

Test another styling export

Test

Removes intervals. Instead fetches player state every 500 ms to get current position of song. Adds seeking state, to not change change position while using song slider.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-	"name": "client",
+	"name": "spotify-clone",
 	"version": "0.1.0",
 	"dependencies": {
-		"@emotion/react": "^11.4.1",
-		"@emotion/styled": "^11.3.0",
+		"@emotion/react": "^11.8.2",
+		"@emotion/styled": "^11.8.1",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-regular-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.15",
 		"@material-ui/core": "^4.12.3",
-		"@mui/material": "^5.0.2",
+		"@material-ui/styles": "^4.11.5",
+		"@mui/icons-material": "^5.5.1",
+		"@mui/material": "^5.5.3",
+		"@mui/styled-engine-sc": "^5.5.2",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -23,7 +26,7 @@
 		"react-spotify-web-playback": "^0.8.1",
 		"serve": "^13.0.2",
 		"spotify-web-api-node": "^5.0.2",
-		"typescript": "^4.3.5",
+		"styled-components": "^5.3.5",
 		"uuid": "^8.3.2",
 		"web-vitals": "^1.0.1"
 	},
