--- a/deployment-config/Dockerfile
+++ b/deployment-config/Dockerfile
@@ -16,6 +16,7 @@ ARG REACT_APP_LYRICS
 ARG REACT_APP_PROD_ID
 ARG REACT_APP_REFRESH
 ARG GENERATE_SOURCEMAP
+ARG REACT_APP_REDIRECT_URI
 
 ENV REACT_APP_AUTH_URL $REACT_APP_AUTH_URL
 ENV REACT_APP_COLOR $REACT_APP_COLOR
@@ -24,6 +25,7 @@ ENV REACT_APP_LYRICS $REACT_APP_LYRICS
 ENV REACT_APP_PROD_ID $REACT_APP_PROD_ID
 ENV REACT_APP_REFRESH $REACT_APP_REFRESH
 ENV GENERATE_SOURCEMAP $GENERATE_SOURCEMAP
+ENV REACT_APP_REDIRECT_URI $REACT_APP_REDIRECT_URI
 
 RUN npm run dockerBuild
 
